--- a/client/client.jade
+++ b/client/client.jade
@@ -59,8 +59,6 @@ template(name='post_view')
                             img.ui.fluid.rounded.image.toggle_view(src=data.url)
                     else if data.is_reddit_media_domain
                         img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
-                    else if has_thumbnail
-                        img.ui.fluid.rounded.image.pointer.call_thumbnail(src=data.thumbnail)
                     // else if watson.metadata.image
                     //     img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
                     if is_youtube
@@ -70,31 +68,26 @@ template(name='post_view')
                         iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                     if data.link_url
                         img.ui.image.pointer.call_visual(src=data.link_url)
-            
+                    if data.selftext
+                        .f12
+                            |#{data.selftext}
                     div 
                     .spacer
                     .spacer
-                    +comments
                     div
                 .four.wide.column.scrolling
+                    if has_thumbnail
+                        img.ui.fluid.rounded.image.pointer.call_thumbnail(src=data.thumbnail)
                     a.ui.large.icon.basic.button(href="/")
                         i.chevron.left.large.icon
                         i.large.home.icon
-                    if in_dev
-                        a.ui.icon.large.basic.button(href="/p/#{_id}/edit")
-                            i.big.pencil.icon
                     i.large.eye.icon
                     | #{views} views
                     if comment_count
                         i.large.chat.icon
                         | #{comment_count} views
-                    +array_edit key='tags' label='tags' icon='tag'
-                    +link_view key='link' label='link'
-                    +array_edit key='time_tags' label='time tags' icon='clock'
-                    +array_edit key='location_tags' label='location tags' icon='marker'
-                    +voting
-                    // i.large.thumbs.up.icon.voteup
-                    // i.large.thumbs.down.icon.anon_votedown
+                    a.ui.fluid.button(href="www.reddit.com/r/#{subreddit}" target="_window")
+                        |#{subreddit}
                     +print_this
                     
    
@@ -250,10 +243,11 @@ template(name='post_card')
         //     +youtube_view key='youtube_id' label='youtube id'
 
         .content
-            a.ui.header(href="/p/#{_id}") #{title}
+            a.ui.small.header(href="/p/#{_id}") #{title}
             div
-            // a.f12.zoomer(href="/p/#{_id}")
-            //     |!{content}
+            if data.selftext
+                a.f11.zoomer(href="/p/#{_id}")
+                    |!{data.selftext}
             //     |!{description}
             //     |!{body}
             // .ui.tiny.icon.input
