--- a/client/style.css
+++ b/client/style.css
@@ -791,7 +791,7 @@ input {
   /*font-family: 'Roboto', sans-serif !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
   /*font-family: 'Lato', sans-serif !important; */
-  /*font-family: 'Ubuntu', sans-serif !important;*/
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 @keyframes fadein {
